# climbing-compress

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  db.py  eval.py  pyproject.toml  server.py  worker.py
app/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
data/: app.db
docs/: FEATURES.md  reconstruct_team_user_daily_metrics.sql
examples/: README.md
pipeline/: __init__.py  cache.py  constants.py  debug_overlay.py  flow.py  movement.py  orchestrate.py  pose.py  render.py  signal.py  smooth.py  speed_curve.py  stabilize.py  tracker.py
tests/: conftest.py  test_analysis_worker.py  test_api_analyze.py  test_api_error_responses.py  test_api_job_actions.py  test_api_job_enqueue.py  test_api_job_filters.py  test_api_job_status.py  test_api_jobs.py  test_api_metrics.py  test_api_metrics_cache.py  test_api_ordering.py  test_api_output_detail.py  test_api_output_filters.py  test_api_output_size_fallback.py  test_api_outputs.py  test_api_project_ordering.py  test_api_project_summary.py  test_api_project_summary_empty.py  test_api_projects.py  test_api_solve.py  test_api_solve_success.py  test_api_upload.py  test_api_video_cache_flag.py  test_api_video_filters.py  test_api_video_serving.py  test_api_videos.py  test_cache.py  test_db_claim_job.py  test_db_jobs.py  test_db_metrics.py  test_db_outputs.py  test_db_projects.py  test_db_summary.py  test_db_sync.py  test_db_videos.py  test_job_cancel_guard.py  test_movement.py  test_orchestrate_analysis_cache.py  test_orchestrate_helpers.py  (+11 more)
(+61 files in other folders)
